# edlink-rostering

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  GLOSSARY.md  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/rules/: alembic.md  code-quality.md  compliance.md  copy-style.md  dependencies.md  edfi-sedm.md  events.md  frontend-components.md  frontend-copy.md  frontend-forms.md  frontend-mutations.md  frontend-tables.md  integration-protocol.md  lti.md  multi-tenancy.md  oneroster.md  scripts.md  security.md  seed-data.md  temporal-model.md  testing.md
alembic/: env.py
alembic/versions/: 2026_05_20_0001_initial_schema.py  2026_05_20_0002_snapshot_source_event_id.py  2026_05_21_0003_snapshot_immutability_and_retry.py  2026_05_22_0004_operator_and_connector_auth.py  2026_05_22_0005_operator_lea_grant.py  2026_05_22_0006_reconciliation_runs.py  2026_05_22_0007_composite_fk_enrollments.py  2026_05_22_0008_idempotency_keys.py  2026_05_27_0009_lea_onboarding_columns.py  2026_05_28_0010_reconciliation_breadth_and_integration_status.py  2026_05_28_0011_rename_roles_owner_admin.py  2026_05_29_0012_drop_connector_authorization_secret_ref.py
architecture/: connector-framework.md  connector-protocol.md  data-model.md
docs/: STACK_REFERENCES.md
docs/compliance/: GROUNDING_SOURCES.md  state-privacy-laws.md
docs/concepts/: auth-patterns.md  edtech-overview.md  sync-patterns.md
docs/database/: erd.md  erd.mermaid
docs/decisions/: planned-ui-capabilities.md
docs/stack/: library-choices.md
docs/standards/: STANDARDS_COVERAGE_MATRIX.md  oneroster-mvp-fields.md
e2e/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/fixtures/: auth.ts  (+1 more)
edlink_rostering/: __init__.py  __main__.py
scripts/: _lib.sh  api-logs.sh  api-restart.sh  api-serve.sh  check-enum-leaks.sh  cov.sh  db-down.sh  db-reset.sh  db-shell.sh  db-up.sh  demo.sh  dev-reset.sh  dev-start.sh  dev-up.sh  e2e-headed.sh  e2e.sh  lint.sh  migrate-down.sh  migrate-status.sh  migrate-up.sh  render-d2.sh  reset-all-dev.sh  reset-demo.sh  reset-quarantine.sh  seed-dev.sh  test-web.sh  test.sh  typecheck.sh  web-build.sh  web-dev.sh
tests/: conftest.py  test_admin_timeline.py  test_alerts.py  test_api.py  test_audit_explorer.py  test_auth.py  test_azure_mocks.py  test_azure_mocks_retry.py  test_bulk_load.py  test_connector_contract.py  test_connectors_api.py  test_dev_seed.py  test_edlink_client.py  test_edlink_connector.py  test_errors.py  test_idempotency_api.py  test_idempotency_sweep.py  test_layer_5_thresholds.py  test_lea_scope_leaf.py  test_logging_bridge.py  test_multi_tenancy_enforcement.py  test_null_connector_e2e.py  test_operator_list_scope.py  test_quarantine_concurrency.py  test_quarantine_service.py  test_readiness_registry.py  test_reconciliation.py  test_reconciliation_api.py  test_reconciliation_scheduler.py  test_request_context.py  test_retention_drift.py  test_retry.py  test_retry_policy.py  test_revert.py  test_snapshot_immutability_trigger.py  test_sync_worker.py  test_test_events.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
(+143 files in other folders)
