[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "edlink-rostering"
version = "0.1.0"
description = "Open-source K-12 rostering integration framework on EdLink's OneRoster API. 5-layer validation pipeline, Merkle-tree reconciliation, and a React admin dashboard."
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
  "sqlalchemy[asyncio]>=2.0,<3",
  "psycopg[binary,pool]>=3.2,<4",
  "alembic>=1.13,<2",
  "click>=8.1,<9",
  "httpx>=0.27,<0.28",
  "structlog>=24,<26",
  "tenacity>=9,<10",
  "python-dateutil>=2.9,<3",
  "fastapi>=0.115,<0.117",
  "uvicorn[standard]>=0.32,<0.33",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.5,<3",
  "pyjwt[crypto]>=2.9,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=9,<10",
  "pytest-asyncio>=1,<2",
  "pytest-cov>=5,<7",
  "mypy>=1.13,<2",
  "ruff>=0.7,<0.9",
  "pre-commit>=4,<5",
  "pip-audit>=2.7,<3",
]

[project.scripts]
edlink-rostering = "edlink_rostering.cli:cli"

[tool.setuptools.packages.find]
include = ["edlink_rostering*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
# Coverage is opt-in via `scripts/cov.sh`, not baked into addopts.
# Rationale: dev-loop pytest runs should stay fast; CI runs coverage explicitly.
# pytest-asyncio 1.3 still calls the deprecated event-loop-policy API
# internally. Filter the noise; we own the modernization plan
# (loop_factory) in every file we control. Remove once pytest-asyncio
# ships loop_factory support.
filterwarnings = [
  "ignore:.*WindowsSelectorEventLoopPolicy.*:DeprecationWarning",
  "ignore:.*set_event_loop_policy.*:DeprecationWarning",
]

[tool.mypy]
python_version = "3.13"
strict = true
# SQLAlchemy 2.0 ships native PEP 484 typing via `Mapped[T]`; the legacy
# `sqlalchemy.ext.mypy.plugin` is in soft maintenance and is the wrong choice
# on 2.0. Removed 2026-05-21 in the senior-Python review pass.

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["alembic/versions", "var", "web"]

[tool.ruff.lint]
# Selected rule families:
#   E, F, W   pyflakes + pycodestyle (core correctness)
#   I         isort (import order)
#   UP        pyupgrade (modernize syntax to target-version)
#   B         flake8-bugbear (common Python bugs)
#   SIM       flake8-simplify
#   RUF       ruff-specific
#   ASYNC     flake8-async (async-correctness)
#   S         flake8-bandit subset (security)
#   PT        flake8-pytest-style
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF", "ASYNC", "S", "PT"]
ignore = [
  "E501",   # line length handled by formatter
  "S101",   # assert is fine in non-test code too (Pydantic, type narrowing)
  "B008",   # FastAPI uses Depends() in defaults; that pattern is correct
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "PT011"]
"alembic/versions/**" = ["E", "F", "I", "UP", "B"]
"edlink_rostering/dev/**" = ["S"]

[tool.ruff.lint.isort]
known-first-party = ["edlink_rostering"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
